[tool.poetry]
name = "pygrove"
version = "1.2.0"
description = ""
authors = ["sileod <damien.sileo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyforest = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
