[metadata]
name = pygrove
description = Automate standard NLP impports
long_description_content_type = text/markdown
url = https://github.com/sileod/pygrove/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
